another attempt at button spacing fix

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -77,8 +77,9 @@
             }
         }
 
-        .cs-button-nodeco{
+        .cs-button-nodeco {
             align-self: center;
+            justify-self: center;
         }
 
         /* Transform Gallery Styling */
